BARC UAT/src/objects/Survey_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Time__c</fullName>
        <label>Contact Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Contact</relationshipLabel>
        <relationshipName>Survey_Contact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Contact</label>
    <nameField>
        <displayFormat>SCN-{0}</displayFormat>
        <label>Survey Contact No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Contact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>